--- a/analiseficha.html
+++ b/analiseficha.html
@@ -265,6 +265,96 @@ body{
   border-color:var(--primary);
   box-shadow:0 0 0 3px rgba(37,99,235,.15);
 }
+/* ================= FORM IMPOSTOS ================= */
+.form-impostos{
+  margin-top:14px;
+  display:grid;
+  grid-template-columns:2fr 1fr 1fr 1fr auto;
+  gap:10px;
+  align-items:center;
+}
+
+/* INPUTS E SELECTS */
+.form-impostos input,
+.form-impostos select{
+  height:42px;
+  padding:0 14px;
+  border-radius:10px;
+  border:1px solid #e5e7eb;
+  font-size:14px;
+  font-weight:600;
+  background:#fff;
+  color:var(--text);
+  outline:none;
+  transition:border .15s ease, box-shadow .15s ease;
+}
+
+.form-impostos input::placeholder{
+  color:#94a3b8;
+  font-weight:500;
+}
+
+.form-impostos input:focus,
+.form-impostos select:focus{
+  border-color:var(--primary);
+  box-shadow:0 0 0 3px rgba(37,99,235,.15);
+}
+
+/* BOTÃO ADICIONAR */
+.btn-add{
+  height:42px;
+  padding:0 18px;
+  border-radius:10px;
+  border:none;
+  background:linear-gradient(135deg, #2563eb, #1d4ed8);
+  color:#fff;
+  font-size:13px;
+  font-weight:900;
+  letter-spacing:.04em;
+  cursor:pointer;
+  box-shadow:0 6px 18px rgba(37,99,235,.35);
+  transition:transform .12s ease, box-shadow .12s ease, opacity .12s ease;
+}
+
+.btn-add:hover{
+  transform:translateY(-1px);
+  box-shadow:0 10px 28px rgba(37,99,235,.45);
+}
+
+.btn-add:active{
+  transform:translateY(0);
+  box-shadow:0 6px 16px rgba(37,99,235,.35);
+}
+
+.btn-add:disabled{
+  opacity:.5;
+  cursor:not-allowed;
+  box-shadow:none;
+}
+
+/* LISTAGEM DE IMPOSTOS */
+.lista-impostos .ing{
+  display:grid;
+  grid-template-columns:1fr auto;
+  gap:12px;
+  align-items:center;
+}
+
+.lista-impostos .ing strong{
+  font-weight:900;
+  color:#0f172a;
+}
+
+/* RESPONSIVO */
+@media(max-width:700px){
+  .form-impostos{
+    grid-template-columns:1fr;
+  }
+
+  .btn-add{
+    width:100%;
+  }
+}
 
   
 </style>
@@ -430,27 +520,36 @@ const margem =
       </div>
     `).join("")}
 
-    <hr>
-    <h3>Impostos / Custos adicionais</h3>
+<hr>
+<h3>Impostos / Custos adicionais</h3>
 
-    ${impostosCache.map(i=>`
-      <div class="ing">
-        <span><b>${i.descricao}</b> (${i.tipo})</span>
-${impostosCache.map(i=>{
-  const exibicao =
-    i.modalidade === "PERCENTUAL"
-      ? moeda((cmv * i.valor) / 100) + ` (${i.valor}%)`
-      : moeda(i.valor);
+<div class="lista-impostos">
+  ${
+    impostosCache.length === 0
+      ? `<p style="color:#64748b">Nenhum imposto ou custo adicional.</p>`
+      : impostosCache.map(i => {
+          const valorCalculado =
+            i.modalidade === "PERCENTUAL"
+              ? (cmv * Number(i.valor)) / 100
+              : Number(i.valor);
 
-  return `
-    <div class="ing">
-      <span><b>${i.descricao}</b> (${i.tipo})</span>
-      <strong>${exibicao}</strong>
-    </div>
-  `;
-}).join("")}
-      </div>
-    `).join("")}
+          const label =
+            i.modalidade === "PERCENTUAL"
+              ? `${i.valor}%`
+              : "Valor fixo";
+
+          return `
+            <div class="ing">
+              <span>
+                <b>${i.descricao}</b>
+                <small>${i.tipo} • ${label}</small>
+              </span>
+              <strong>${moeda(valorCalculado)}</strong>
+            </div>
+          `;
+        }).join("")
+  }
+</div>
 
 <div style="margin-top:12px;display:grid;grid-template-columns:2fr 1fr 1fr 1fr;gap:8px">
   <input id="impDesc" placeholder="Descrição">
