--- a/analiseficha.html
+++ b/analiseficha.html
@@ -11,14 +11,18 @@
 <style>
 :root{
   --primary:#2563eb;
+  --primary-dark:#1e40af;
   --success:#16a34a;
   --danger:#dc2626;
+  --warning:#f59e0b;
   --bg:#f8fafc;
   --card:#ffffff;
   --text:#0f172a;
   --muted:#64748b;
+  --border:#e5e7eb;
 }
 
+/* RESET */
 *{
   box-sizing:border-box;
   -webkit-font-smoothing:antialiased;
@@ -42,11 +46,11 @@ body{
 /* ================= CARD ================= */
 .card{
   background:var(--card);
-  border-radius:24px;
+  border-radius:22px;
   box-shadow:0 18px 40px rgba(0,0,0,.08);
   overflow:hidden;
   cursor:pointer;
-  transition:transform .15s ease, box-shadow .15s ease;
+  transition:.18s ease;
 }
 
 .card:hover{
@@ -74,76 +78,64 @@ body{
   display:inline-block;
   padding:6px 12px;
   border-radius:999px;
-  background:#e0f2fe;
-  color:#0369a1;
+  background:#eef2ff;
+  color:#3730a3;
   font-size:12px;
   font-weight:800;
   margin:4px 6px 0 0;
 }
 
-/* ================= MODAL OVERLAY ================= */
+/* ================= MODAL ================= */
 .modal{
   position:fixed;
   inset:0;
-  background:rgba(0,0,0,.6);
+  background:rgba(15,23,42,.6);
   display:none;
   align-items:center;
   justify-content:center;
   z-index:100;
 }
 
-/* ================= MODAL BOX ================= */
+/* CAIXA */
 .modal-box{
   background:#fff;
   width:100%;
-  max-width:820px;
-  max-height:90vh;
-  border-radius:28px;
+  max-width:860px;
+  max-height:92vh;
+  border-radius:26px;
   overflow:hidden;
   display:flex;
   flex-direction:column;
-  box-shadow:0 30px 80px rgba(0,0,0,.35);
+  box-shadow:0 40px 90px rgba(0,0,0,.35);
   animation:modalIn .25s ease;
 }
 
 @keyframes modalIn{
-  from{transform:translateY(20px);opacity:0}
+  from{transform:translateY(24px);opacity:0}
   to{transform:translateY(0);opacity:1}
 }
 
-/* ================= MODAL IMAGE ================= */
+/* IMAGEM */
 .modal-img{
   width:100%;
   height:240px;
   object-fit:cover;
-  flex-shrink:0;
 }
 
-/* ================= MODAL BODY ================= */
+/* CORPO */
 .modal-body{
   padding:26px;
   overflow-y:auto;
 }
 
-/* ================= SCROLL BONITO ================= */
-.modal-body::-webkit-scrollbar{
-  width:8px;
-}
-
-.modal-body::-webkit-scrollbar-track{
-  background:#f1f5f9;
-}
-
+/* SCROLL */
+.modal-body::-webkit-scrollbar{width:8px}
 .modal-body::-webkit-scrollbar-thumb{
   background:#cbd5e1;
   border-radius:8px;
 }
 
-.modal-body::-webkit-scrollbar-thumb:hover{
-  background:#94a3b8;
-}
-
-/* ================= FECHAR ================= */
+/* FECHAR */
 .close{
   position:absolute;
   top:14px;
@@ -151,87 +143,153 @@ body{
   font-size:24px;
   cursor:pointer;
   font-weight:900;
-  z-index:10;
   color:#fff;
-  text-shadow:0 2px 6px rgba(0,0,0,.6);
+  z-index:10;
+  text-shadow:0 2px 8px rgba(0,0,0,.5);
 }
 
-/* ================= TEXTOS MODAL ================= */
+/* ================= TEXTOS ================= */
 .modal-body h2{
-  margin:0 0 10px;
+  margin:0 0 12px;
+  font-size:24px;
+  font-weight:900;
+}
+
+.modal-body h3{
+  margin:18px 0 10px;
+  font-size:16px;
   font-weight:900;
 }
 
 .modal-body p{
   margin:6px 0;
-  color:var(--muted);
   font-size:14px;
+  color:var(--muted);
 }
 
 .modal-body hr{
   border:none;
   height:1px;
-  background:#e5e7eb;
-  margin:18px 0;
+  background:var(--border);
+  margin:20px 0;
 }
 
-/* ================= INGREDIENTES ================= */
+/* ================= INGREDIENTES / LISTAS ================= */
 .ing{
   display:grid;
   grid-template-columns:1fr auto auto;
   gap:14px;
-  font-size:14px;
   padding:12px 0;
-  border-bottom:1px solid #e5e7eb;
+  border-bottom:1px dashed var(--border);
+  font-size:14px;
 }
 
-.ing:last-child{
-  border-bottom:none;
+.ing:last-child{border-bottom:none}
+
+.ing b{font-weight:800}
+.ing small{color:var(--muted)}
+
+/* ================= LISTA IMPOSTOS ================= */
+.lista-impostos .ing{
+  grid-template-columns:1fr auto auto;
+  align-items:center;
 }
 
-.ing b{
-  font-weight:800;
+/* ================= BOTÕES ================= */
+button{
+  font-family:Inter,sans-serif;
 }
 
-.ing small{
-  color:var(--muted);
-}
-
-/* ================= LUCRO ================= */
-.lucro{
-  font-size:16px;
-  margin-top:8px;
-}
-
-.lucro.pos{
-  color:var(--success);
+/* BOTÃO PRINCIPAL */
+.btn-add{
+  height:42px;
+  padding:0 20px;
+  border-radius:12px;
+  border:none;
+  background:linear-gradient(135deg, var(--primary), var(--primary-dark));
+  color:#fff;
+  font-size:13px;
   font-weight:900;
+  letter-spacing:.05em;
+  cursor:pointer;
+  box-shadow:0 10px 26px rgba(37,99,235,.35);
+  transition:.15s ease;
 }
 
-.lucro.neg{
-  color:var(--danger);
-  font-weight:900;
+.btn-add:hover{
+  transform:translateY(-1px);
+  box-shadow:0 14px 34px rgba(37,99,235,.45);
 }
 
-/* ================= RESPONSIVO ================= */
-@media(max-width:600px){
-  .modal-box{
-    max-width:94%;
-    border-radius:22px;
-  }
-
-  .modal-img{
-    height:200px;
-  }
-
-  .ing{
-    grid-template-columns:1fr auto;
-  }
-
-  .ing span:last-child{
-    grid-column:2;
-  }
+/* BOTÕES AÇÃO */
+.btn-icon{
+  border:none;
+  border-radius:8px;
+  padding:6px 10px;
+  cursor:pointer;
+  font-weight:700;
+  font-size:14px;
+  transition:.12s ease;
 }
+
+.btn-edit{
+  background:#e0f2fe;
+  color:#0369a1;
+}
+
+.btn-edit:hover{
+  background:#bae6fd;
+}
+
+.btn-delete{
+  background:#fee2e2;
+  color:#991b1b;
+}
+
+.btn-delete:hover{
+  background:#fecaca;
+}
+
+/* ================= PRECIFICAÇÃO ================= */
+.precificacao{
+  background:#f1f5f9;
+  border:1px solid var(--border);
+  border-radius:16px;
+  padding:16px;
+  margin:14px 0;
+}
+
+.precificacao input{
+  height:42px;
+  padding:0 14px;
+  border-radius:10px;
+  border:1px solid var(--border);
+  font-weight:700;
+  font-size:14px;
+}
+
+.precificacao input[readonly]{
+  background:#e5e7eb;
+  color:#334155;
+}
+
+/* ================= FORM IMPOSTOS ================= */
+.form-impostos{
+  display:grid;
+  grid-template-columns:2fr 1fr 1fr 1fr;
+  gap:10px;
+  margin-top:12px;
+}
+
+.form-impostos input,
+.form-impostos select{
+  height:42px;
+  border-radius:10px;
+  border:1px solid var(--border);
+  padding:0 14px;
+  font-weight:600;
+}
+
 /* ================= FILTROS ================= */
 .filters{
   display:flex;
@@ -244,119 +302,18 @@ body{
 .filters select{
   padding:14px 18px;
   border-radius:999px;
-  border:1px solid #e5e7eb;
-  font-size:14px;
+  border:1px solid var(--border);
   font-weight:600;
-  outline:none;
-  background:#fff;
 }
 
-.filters input{
-  flex:1;
-  min-width:220px;
-}
-
-.filters select{
-  min-width:180px;
-}
-
-.filters input:focus,
-.filters select:focus{
-  border-color:var(--primary);
-  box-shadow:0 0 0 3px rgba(37,99,235,.15);
-}
-/* ================= FORM IMPOSTOS ================= */
-.form-impostos{
-  margin-top:14px;
-  display:grid;
-  grid-template-columns:2fr 1fr 1fr 1fr auto;
-  gap:10px;
-  align-items:center;
-}
-
-/* INPUTS E SELECTS */
-.form-impostos input,
-.form-impostos select{
-  height:42px;
-  padding:0 14px;
-  border-radius:10px;
-  border:1px solid #e5e7eb;
-  font-size:14px;
-  font-weight:600;
-  background:#fff;
-  color:var(--text);
-  outline:none;
-  transition:border .15s ease, box-shadow .15s ease;
-}
-
-.form-impostos input::placeholder{
-  color:#94a3b8;
-  font-weight:500;
-}
-
-.form-impostos input:focus,
-.form-impostos select:focus{
-  border-color:var(--primary);
-  box-shadow:0 0 0 3px rgba(37,99,235,.15);
-}
-
-/* BOTÃO ADICIONAR */
-.btn-add{
-  height:42px;
-  padding:0 18px;
-  border-radius:10px;
-  border:none;
-  background:linear-gradient(135deg, #2563eb, #1d4ed8);
-  color:#fff;
-  font-size:13px;
-  font-weight:900;
-  letter-spacing:.04em;
-  cursor:pointer;
-  box-shadow:0 6px 18px rgba(37,99,235,.35);
-  transition:transform .12s ease, box-shadow .12s ease, opacity .12s ease;
-}
-
-.btn-add:hover{
-  transform:translateY(-1px);
-  box-shadow:0 10px 28px rgba(37,99,235,.45);
-}
-
-.btn-add:active{
-  transform:translateY(0);
-  box-shadow:0 6px 16px rgba(37,99,235,.35);
-}
-
-.btn-add:disabled{
-  opacity:.5;
-  cursor:not-allowed;
-  box-shadow:none;
-}
-
-/* LISTAGEM DE IMPOSTOS */
-.lista-impostos .ing{
-  display:grid;
-  grid-template-columns:1fr auto;
-  gap:12px;
-  align-items:center;
-}
-
-.lista-impostos .ing strong{
-  font-weight:900;
-  color:#0f172a;
-}
-
-/* RESPONSIVO */
+/* ================= RESPONSIVO ================= */
 @media(max-width:700px){
-  .form-impostos{
-    grid-template-columns:1fr;
-  }
-
-  .btn-add{
-    width:100%;
-  }
+  .modal-box{max-width:95%}
+  .lista-impostos .ing{grid-template-columns:1fr}
+  .form-impostos{grid-template-columns:1fr}
+  .btn-add{width:100%}
 }
 
-  
 </style>
 </head>
 
