--- a/analiseficha.html
+++ b/analiseficha.html
@@ -9,20 +9,34 @@
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 
 <style>
+/* =========================================================
+   VARIÁVEIS
+========================================================= */
 :root{
   --primary:#2563eb;
   --primary-dark:#1e40af;
   --success:#16a34a;
   --danger:#dc2626;
   --warning:#f59e0b;
+
   --bg:#f8fafc;
   --card:#ffffff;
   --text:#0f172a;
   --muted:#64748b;
   --border:#e5e7eb;
+
+  --radius-lg:26px;
+  --radius-md:14px;
+  --radius-sm:8px;
+
+  --shadow-sm:0 6px 16px rgba(0,0,0,.08);
+  --shadow-md:0 18px 40px rgba(0,0,0,.12);
+  --shadow-lg:0 40px 90px rgba(0,0,0,.35);
 }
 
-/* RESET */
+/* =========================================================
+   RESET / BASE
+========================================================= */
 *{
   box-sizing:border-box;
   -webkit-font-smoothing:antialiased;
@@ -35,7 +49,9 @@ body{
   color:var(--text);
 }
 
-/* ================= GRID ================= */
+/* =========================================================
+   GRID PRINCIPAL
+========================================================= */
 .grid{
   display:grid;
   grid-template-columns:repeat(auto-fill,minmax(340px,1fr));
@@ -43,11 +59,13 @@ body{
   padding:22px;
 }
 
-/* ================= CARD ================= */
+/* =========================================================
+   CARD
+========================================================= */
 .card{
   background:var(--card);
   border-radius:22px;
-  box-shadow:0 18px 40px rgba(0,0,0,.08);
+  box-shadow:var(--shadow-md);
   overflow:hidden;
   cursor:pointer;
   transition:.18s ease;
@@ -55,7 +73,7 @@ body{
 
 .card:hover{
   transform:translateY(-4px);
-  box-shadow:0 26px 60px rgba(0,0,0,.12);
+  box-shadow:0 26px 60px rgba(0,0,0,.18);
 }
 
 .card img{
@@ -73,7 +91,9 @@ body{
   font-weight:800;
 }
 
-/* ================= BADGES ================= */
+/* =========================================================
+   BADGES
+========================================================= */
 .badge{
   display:inline-block;
   padding:6px 12px;
@@ -85,28 +105,32 @@ body{
   margin:4px 6px 0 0;
 }
 
-/* ================= MODAL ================= */
+/* =========================================================
+   MODAL OVERLAY
+========================================================= */
 .modal{
   position:fixed;
   inset:0;
-  background:rgba(15,23,42,.6);
+  background:rgba(15,23,42,.65);
   display:none;
   align-items:center;
   justify-content:center;
   z-index:100;
 }
 
-/* CAIXA */
+/* =========================================================
+   MODAL BOX
+========================================================= */
 .modal-box{
   background:#fff;
   width:100%;
-  max-width:860px;
+  max-width:880px;
   max-height:92vh;
-  border-radius:26px;
+  border-radius:var(--radius-lg);
   overflow:hidden;
   display:flex;
   flex-direction:column;
-  box-shadow:0 40px 90px rgba(0,0,0,.35);
+  box-shadow:var(--shadow-lg);
   animation:modalIn .25s ease;
 }
 
@@ -115,48 +139,56 @@ body{
   to{transform:translateY(0);opacity:1}
 }
 
-/* IMAGEM */
+/* =========================================================
+   IMAGEM MODAL
+========================================================= */
 .modal-img{
   width:100%;
   height:240px;
   object-fit:cover;
+  flex-shrink:0;
 }
 
-/* CORPO */
+/* =========================================================
+   CORPO MODAL
+========================================================= */
 .modal-body{
   padding:26px;
   overflow-y:auto;
 }
 
-/* SCROLL */
 .modal-body::-webkit-scrollbar{width:8px}
 .modal-body::-webkit-scrollbar-thumb{
   background:#cbd5e1;
   border-radius:8px;
 }
 
-/* FECHAR */
+/* =========================================================
+   BOTÃO FECHAR
+========================================================= */
 .close{
   position:absolute;
   top:14px;
   right:18px;
-  font-size:24px;
+  font-size:26px;
   cursor:pointer;
   font-weight:900;
   color:#fff;
   z-index:10;
-  text-shadow:0 2px 8px rgba(0,0,0,.5);
+  text-shadow:0 2px 10px rgba(0,0,0,.6);
 }
 
-/* ================= TEXTOS ================= */
+/* =========================================================
+   TEXTOS
+========================================================= */
 .modal-body h2{
   margin:0 0 12px;
-  font-size:24px;
+  font-size:26px;
   font-weight:900;
 }
 
 .modal-body h3{
-  margin:18px 0 10px;
+  margin:20px 0 10px;
   font-size:16px;
   font-weight:900;
 }
@@ -171,10 +203,12 @@ body{
   border:none;
   height:1px;
   background:var(--border);
-  margin:20px 0;
+  margin:22px 0;
 }
 
-/* ================= INGREDIENTES / LISTAS ================= */
+/* =========================================================
+   LISTAS / INGREDIENTES / IMPOSTOS
+========================================================= */
 .ing{
   display:grid;
   grid-template-columns:1fr auto auto;
@@ -182,6 +216,7 @@ body{
   padding:12px 0;
   border-bottom:1px dashed var(--border);
   font-size:14px;
+  align-items:center;
 }
 
 .ing:last-child{border-bottom:none}
@@ -189,83 +224,28 @@ body{
 .ing b{font-weight:800}
 .ing small{color:var(--muted)}
 
-/* ================= LISTA IMPOSTOS ================= */
 .lista-impostos .ing{
   grid-template-columns:1fr auto auto;
-  align-items:center;
 }
 
-/* ================= BOTÕES ================= */
-button{
-  font-family:Inter,sans-serif;
-}
-
-/* BOTÃO PRINCIPAL */
-.btn-add{
-  height:42px;
-  padding:0 20px;
-  border-radius:12px;
-  border:none;
-  background:linear-gradient(135deg, var(--primary), var(--primary-dark));
-  color:#fff;
-  font-size:13px;
-  font-weight:900;
-  letter-spacing:.05em;
-  cursor:pointer;
-  box-shadow:0 10px 26px rgba(37,99,235,.35);
-  transition:.15s ease;
-}
-
-.btn-add:hover{
-  transform:translateY(-1px);
-  box-shadow:0 14px 34px rgba(37,99,235,.45);
-}
-
-/* BOTÕES AÇÃO */
-.btn-icon{
-  border:none;
-  border-radius:8px;
-  padding:6px 10px;
-  cursor:pointer;
-  font-weight:700;
-  font-size:14px;
-  transition:.12s ease;
-}
-
-.btn-edit{
-  background:#e0f2fe;
-  color:#0369a1;
-}
-
-.btn-edit:hover{
-  background:#bae6fd;
-}
-
-.btn-delete{
-  background:#fee2e2;
-  color:#991b1b;
-}
-
-.btn-delete:hover{
-  background:#fecaca;
-}
-
-/* ================= PRECIFICAÇÃO ================= */
+/* =========================================================
+   PRECIFICAÇÃO (MARKUP)
+========================================================= */
 .precificacao{
   background:#f1f5f9;
   border:1px solid var(--border);
-  border-radius:16px;
+  border-radius:18px;
   padding:16px;
-  margin:14px 0;
+  margin:16px 0;
 }
 
 .precificacao input{
-  height:42px;
+  height:44px;
   padding:0 14px;
-  border-radius:10px;
+  border-radius:12px;
   border:1px solid var(--border);
-  font-weight:700;
   font-size:14px;
+  font-weight:700;
 }
 
 .precificacao input[readonly]{
@@ -273,7 +253,13 @@ button{
   color:#334155;
 }
 
-/* ================= FORM IMPOSTOS ================= */
+/* =========================================================
+   FORMULÁRIOS
+========================================================= */
+input, select{
+  font-family:Inter,sans-serif;
+}
+
 .form-impostos{
   display:grid;
   grid-template-columns:2fr 1fr 1fr 1fr;
@@ -283,14 +269,75 @@ button{
 
 .form-impostos input,
 .form-impostos select{
-  height:42px;
-  border-radius:10px;
+  height:44px;
+  border-radius:12px;
   border:1px solid var(--border);
   padding:0 14px;
+  font-size:14px;
   font-weight:600;
 }
 
-/* ================= FILTROS ================= */
+.form-impostos input:focus,
+.form-impostos select:focus{
+  outline:none;
+  border-color:var(--primary);
+  box-shadow:0 0 0 3px rgba(37,99,235,.15);
+}
+
+/* =========================================================
+   BOTÕES
+========================================================= */
+button{
+  font-family:Inter,sans-serif;
+  border:none;
+  cursor:pointer;
+}
+
+/* BOTÃO PRINCIPAL */
+.btn-add{
+  height:44px;
+  padding:0 22px;
+  border-radius:14px;
+  background:linear-gradient(135deg,var(--primary),var(--primary-dark));
+  color:#fff;
+  font-size:13px;
+  font-weight:900;
+  letter-spacing:.05em;
+  box-shadow:0 12px 30px rgba(37,99,235,.35);
+  transition:.15s ease;
+}
+
+.btn-add:hover{
+  transform:translateY(-1px);
+  box-shadow:0 16px 40px rgba(37,99,235,.45);
+}
+
+/* BOTÕES ÍCONE */
+.btn-icon{
+  border-radius:10px;
+  padding:6px 12px;
+  font-size:14px;
+  font-weight:800;
+  transition:.12s ease;
+}
+
+.btn-edit{
+  background:#e0f2fe;
+  color:#0369a1;
+}
+
+.btn-edit:hover{background:#bae6fd}
+
+.btn-delete{
+  background:#fee2e2;
+  color:#991b1b;
+}
+
+.btn-delete:hover{background:#fecaca}
+
+/* =========================================================
+   FILTROS
+========================================================= */
 .filters{
   display:flex;
   gap:14px;
@@ -303,16 +350,36 @@ button{
   padding:14px 18px;
   border-radius:999px;
   border:1px solid var(--border);
+  font-size:14px;
   font-weight:600;
 }
 
-/* ================= RESPONSIVO ================= */
-@media(max-width:700px){
-  .modal-box{max-width:95%}
-  .lista-impostos .ing{grid-template-columns:1fr}
-  .form-impostos{grid-template-columns:1fr}
-  .btn-add{width:100%}
+/* =========================================================
+   RESPONSIVO
+========================================================= */
+@media(max-width:900px){
+  .modal-box{max-width:96%}
 }
+
+@media(max-width:700px){
+  .lista-impostos .ing{
+    grid-template-columns:1fr;
+    gap:8px;
+  }
+
+  .form-impostos{
+    grid-template-columns:1fr;
+  }
+
+  .btn-add{
+    width:100%;
+  }
+}
+
+@media(max-width:520px){
+  .modal-img{height:200px}
+}
+
 
 </style>
 </head>
