--- a/analiseficha.html
+++ b/analiseficha.html
@@ -415,29 +415,31 @@ const sb = supabase.createClient(
   "https://dxkszikemntfusfyrzos.supabase.co",
   "sb_publishable_NNFvdfSXgOdGGVcSbphbjQ_brC3_9ed"
 );
-let ingredientesBase = [];
 
-async function carregarIngredientesBase(){
-  const { data, error } = await sb
-    .from("produtos") // 👈 ajuste se o nome for outro
-    .select("*")
-    .order("nome");
-
-  if(error){
-    console.error(error);
-    alert("Erro ao carregar ingredientes");
-    return;
-  }
-
-  ingredientesBase = data;
-}
-
+/* ================= HELPERS ================= */
 const moeda = v =>
   "R$ " + Number(v || 0).toLocaleString("pt-BR",{minimumFractionDigits:2});
 
 /* ================= STATE ================= */
 let pratos = [];
 let impostosCache = [];
+let ingredientesBase = [];
+
+/* ================= LOAD INGREDIENTES BASE ================= */
+async function carregarIngredientesBase(){
+  const { data, error } = await sb
+    .from("produtos")
+    .select("*")
+    .order("nome");
+
+  if(error){
+    console.error(error);
+    alert("Erro ao carregar ingredientes base");
+    return;
+  }
+
+  ingredientesBase = data;
+}
 
 /* ================= LOAD PRATOS ================= */
 async function carregarPratos(){
@@ -460,8 +462,8 @@ async function carregarPratos(){
 function renderLista(){
   cards.innerHTML = "";
 
-  const nomeFiltro = (filtroNome?.value || "").toUpperCase();
-  const tipoFiltro = filtroTipo?.value || "";
+  const nomeFiltro = (filtroNome.value || "").toUpperCase();
+  const tipoFiltro = filtroTipo.value || "";
 
   pratos
     .filter(p =>
@@ -483,7 +485,7 @@ function renderCard(p){
       <h3>${p.nome}</h3>
       <span class="badge">${p.tipo || "-"}</span>
       <span class="badge">CMV ${moeda(p.custo_unitario)}</span>
-      ${Number(p.preco_venda) > 0 ? `<span class="badge">Venda ${moeda(p.preco_venda)}</span>` : ``}
+      ${p.preco_venda > 0 ? `<span class="badge">Venda ${moeda(p.preco_venda)}</span>` : ``}
     </div>
   `;
   cards.appendChild(c);
@@ -491,11 +493,10 @@ function renderCard(p){
 
 /* ================= MODAL ================= */
 async function abrir(p){
-  document.body.style.overflow = "hidden";
   modal.style.display = "flex";
+  document.body.style.overflow = "hidden";
   mFoto.src = p.foto_url || "";
 
-  /* INGREDIENTES */
   const { data: itens } = await sb
     .from("buffet_itens")
     .select("*")
@@ -503,358 +504,62 @@ async function abrir(p){
 
   const cmv = itens.reduce((s,i)=>s + Number(i.custo_calculado||0),0);
 
-  /* IMPOSTOS / CUSTOS */
-  const { data: impostos } = await sb
-    .from("impostos")
-    .select("*")
-    .eq("buffet_id", p.id);
-
-  impostosCache = impostos || [];
-
-let totalImpostos = 0;
-
-impostosCache.forEach(i => {
-  const valor = Number(i.valor || 0);
-
-  if (i.modalidade === "FIXO") {
-    totalImpostos += valor;
-  }
-
-  if (i.modalidade === "PERCENTUAL") {
-    totalImpostos += (cmv * valor) / 100;
-  }
-});
-
-const cmvFinal = cmv + totalImpostos;
-
-// ativa cálculo automático do markup
-setTimeout(() => {
-  const mkInput = document.getElementById("markupPerc");
-  const precoInput = document.getElementById("precoSugerido");
-
-  if(mkInput && precoInput){
-    mkInput.oninput = () => {
-      const mk = Number(mkInput.value || 0);
-      const precoCalc = cmvFinal * (1 + mk / 100);
-      precoInput.value = moeda(precoCalc);
-    };
-  }
-}, 50);
-
-
-  
-  const precoVenda = Number(p.preco_venda||0);
-  const lucro = precoVenda > 0 ? precoVenda - (cmv + totalImpostos) : 0;
-const margem =
-  precoVenda > 0 && lucro !== 0
-    ? (lucro / precoVenda) * 100
-    : 0;
-
   mBody.innerHTML = `
     <h2>${p.nome}</h2>
-
-    ${precoVenda > 0 ? `<p><b>Preço de venda:</b> ${moeda(precoVenda)}</p>` : ``}
     <p><b>CMV:</b> ${moeda(cmv)}</p>
-    <p><b>Impostos / Custos:</b> ${moeda(totalImpostos)}</p>
-<hr>
-<h3>Precificação (Markup)</h3>
 
-<div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;align-items:center">
-  <input id="markupPerc"
-         type="number"
-         step="1"
-         placeholder="Markup (%)">
+    <hr>
+    <h3>Ingredientes</h3>
 
-  <input id="precoSugerido"
-         readonly
-         placeholder="Preço sugerido">
-</div>
-
-<button class="btn-add"
-        style="margin-top:10px"
-        onclick="salvarPrecoVenda('${p.id}')">
-  SALVAR PREÇO DE VENDA
-</button>
-
-    ${precoVenda > 0 ? `
-      <p><b>Lucro:</b> ${moeda(lucro)}</p>
-      <p><b>Margem:</b> ${margem.toFixed(2)}%</p>
-    ` : `
-      <p style="color:#dc2626;font-weight:700">
-        ⚠️ Preço de venda não cadastrado
-      </p>
-    `}
-
-<hr>
-<h3>Ingredientes</h3>
-
-<div class="lista-ingredientes">
-  ${itens.map(i=>`
-    <div class="ing">
-      <span>
-        <b>${i.nome}</b><br>
-        <small>${i.quantidade} ${i.unidade_uso}</small>
-      </span>
-
-      <strong>${moeda(i.custo_calculado)}</strong>
-
-      <div style="display:flex;gap:6px">
-        <button class="btn-icon btn-edit"
-                onclick="editarIngrediente('${i.id}','${p.id}')">
-          ✏️
-        </button>
-
-        <button class="btn-icon btn-delete"
-                onclick="excluirIngrediente('${i.id}','${p.id}')">
-          🗑️
-        </button>
+    ${itens.map(i=>`
+      <div class="ing">
+        <span>
+          <b>${i.nome}</b><br>
+          <small>${i.quantidade} ${i.unidade_uso}</small>
+        </span>
+        <strong>${moeda(i.custo_calculado)}</strong>
+        <div style="display:flex;gap:6px">
+          <button class="btn-icon btn-edit"
+                  onclick="editarIngrediente('${i.id}','${p.id}')">✏️</button>
+          <button class="btn-icon btn-delete"
+                  onclick="excluirIngrediente('${i.id}','${p.id}')">🗑️</button>
+        </div>
       </div>
-    </div>
-  `).join("")}
-</div>
-
-<div class="precificacao">
-  <h3>Adicionar / Editar ingrediente</h3>
-
-  <select id="ingProduto">
-    <option value="">Selecione o ingrediente</option>
-    ${ingredientesBase.map(p=>`
-      <option value="${p.id}"
-              data-custo="${p.custo_unitario}"
-              data-unidade="${p.unidade_padrao}">
-        ${p.nome}
-      </option>
     `).join("")}
-  </select>
 
-  <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px">
-    <input id="ingQtd" type="number" step="0.001" placeholder="Quantidade usada">
-    <input id="ingUnidade" placeholder="Unidade" readonly>
-  </div>
+    <div class="precificacao">
+      <h3>Adicionar / Editar ingrediente</h3>
 
-  <button id="btnIngrediente"
-          class="btn-add"
-          style="margin-top:12px"
-          onclick="salvarIngrediente('${p.id}')">
-    SALVAR INGREDIENTE
-  </button>
-</div>
+      <select id="ingProduto">
+        <option value="">Selecione</option>
+        ${ingredientesBase.map(i=>`
+          <option value="${i.id}"
+                  data-unidade="${i.unidade_padrao}">
+            ${i.nome}
+          </option>
+        `).join("")}
+      </select>
 
-            </div>
-          `;
-        }).join("")
-  }
-</div>
+      <div style="display:grid;grid-template-columns:1fr 1fr;gap:10px;margin-top:10px">
+        <input id="ingQtd" type="number" step="0.001" placeholder="Quantidade">
+        <input id="ingUnidade" readonly placeholder="Unidade">
+      </div>
 
-
-<div style="margin-top:12px;display:grid;grid-template-columns:2fr 1fr 1fr 1fr;gap:8px">
-  <input id="impDesc" placeholder="Descrição">
-
-  <select id="impTipo">
-    <option value="IMPOSTO">IMPOSTO</option>
-    <option value="CUSTO">CUSTO</option>
-  </select>
-
-  <select id="impModalidade">
-    <option value="FIXO">VALOR FIXO</option>
-    <option value="PERCENTUAL">PERCENTUAL (%)</option>
-  </select>
-
-  <input id="impValor" type="number" step="0.01" placeholder="Valor">
-</div>
-
-<button style="margin-top:12px" onclick="salvarImposto('${p.id}')">
-  ADICIONAR
-</button>
-
+      <button id="btnIngrediente"
+              class="btn-add"
+              style="margin-top:12px"
+              onclick="salvarIngrediente('${p.id}')">
+        SALVAR INGREDIENTE
+      </button>
+    </div>
   `;
 }
-async function salvarImposto(buffetId){
-  const desc = impDesc.value.trim();
-  const tipo = impTipo.value;
-  const modalidade = impModalidade.value;
-  const valor = Number(impValor.value || 0);
-
-  if(!desc || valor <= 0){
-    alert("Preencha descrição e valor");
-    return;
-  }
-
-  const { error } = await sb
-    .from("impostos")
-    .insert({
-      buffet_id: buffetId,
-      descricao: desc,
-      tipo,
-      modalidade,
-      valor
-    });
-
-  if(error){
-    console.error("ERRO IMPOSTO:", error);
-    alert(error.message);
-    return;
-  }
-
-  // limpa campos
-  impDesc.value = "";
-  impValor.value = "";
-
-  // recarrega modal
-  abrir(pratos.find(p => p.id === buffetId));
-}
-async function excluirImposto(impostoId, buffetId){
-  if(!confirm("Deseja excluir este custo/imposto?")) return;
-
-  const { error } = await sb
-    .from("impostos")
-    .delete()
-    .eq("id", impostoId);
-
-  if(error){
-    console.error(error);
-    alert("Erro ao excluir");
-    return;
-  }
-
-  abrir(pratos.find(p => p.id === buffetId));
-}
-async function editarImposto(impostoId, buffetId){
-  const imposto = impostosCache.find(i => i.id === impostoId);
-  if(!imposto) return;
-
-  impDesc.value = imposto.descricao;
-  impTipo.value = imposto.tipo;
-  impModalidade.value = imposto.modalidade;
-  impValor.value = imposto.valor;
-
-  // muda botão para salvar edição
-  const btn = document.querySelector(".btn-add");
-  btn.innerText = "SALVAR";
-  btn.onclick = async () => {
-    const desc = impDesc.value.trim();
-    const tipo = impTipo.value;
-    const modalidade = impModalidade.value;
-    const valor = Number(impValor.value || 0);
-
-    if(!desc || valor <= 0){
-      alert("Preencha descrição e valor");
-      return;
-    }
-
-    const { error } = await sb
-      .from("impostos")
-      .update({
-        descricao: desc,
-        tipo,
-        modalidade,
-        valor
-      })
-      .eq("id", impostoId);
-
-    if(error){
-      console.error(error);
-      alert("Erro ao atualizar");
-      return;
-    }
-
-    // restaura botão
-    btn.innerText = "ADICIONAR";
-    btn.onclick = () => salvarImposto(buffetId);
-
-    impDesc.value = "";
-    impValor.value = "";
-
-    abrir(pratos.find(p => p.id === buffetId));
-  };
-}
-
-/* ================= FECHAR ================= */
-function fechar(){
-  modal.style.display = "none";
-  document.body.style.overflow = "";
-}
-
-/* ================= INIT ================= */
-carregarPratos();
-async function salvarPrecoVenda(buffetId){
-  const mk = Number(markupPerc.value || 0);
-  if(mk <= 0){
-    alert("Informe o markup");
-    return;
-  }
-
-  const prato = pratos.find(p => p.id === buffetId);
-
-  // CMV FINAL = CMV base + impostos
-  let cmvFinal = prato.custo_unitario;
-
-  impostosCache.forEach(i => {
-    if(i.modalidade === "FIXO"){
-      cmvFinal += Number(i.valor);
-    }
-    if(i.modalidade === "PERCENTUAL"){
-      cmvFinal += (prato.custo_unitario * Number(i.valor)) / 100;
-    }
-  });
-
-  const precoVenda = cmvFinal * (1 + mk / 100);
-
-  const { error } = await sb
-    .from("buffet")
-    .update({ preco_venda: precoVenda })
-    .eq("id", buffetId);
-
-  if(error){
-    console.error(error);
-    alert("Erro ao salvar preço");
-    return;
-  }
-
-  abrir(prato);
-}
-let ingredientesBase = [];
-
-async function carregarIngredientesBase(){
-  const { data, error } = await sb
-    .from("produtos") // 👈 ajuste se o nome for outro
-    .select("*")
-    .order("nome");
-
-  if(error){
-    console.error(error);
-    alert("Erro ao carregar ingredientes");
-    return;
-  }
-
-  ingredientesBase = data;
-}
-/* ================= INGREDIENTES BASE ================= */
-let ingredientesBase = [];
-
-async function carregarIngredientesBase(){
-  const { data, error } = await sb
-    .from("produtos") // ajuste se necessário
-    .select("*")
-    .order("nome");
-
-  if(error){
-    console.error(error);
-    alert("Erro ao carregar ingredientes");
-    return;
-  }
-
-  ingredientesBase = data;
-}
-
-carregarIngredientesBase();
 
 /* ================= AUTO UNIDADE ================= */
 document.addEventListener("change", e=>{
   if(e.target.id === "ingProduto"){
     const opt = e.target.selectedOptions[0];
-    if(!opt) return;
-    ingUnidade.value = opt.dataset.unidade || "";
+    if(opt) ingUnidade.value = opt.dataset.unidade || "";
   }
 });
 
@@ -864,24 +569,23 @@ async function salvarIngrediente(buffetId){
   const qtd = Number(ingQtd.value || 0);
 
   if(!produtoId || qtd <= 0){
-    alert("Selecione o ingrediente e informe a quantidade");
+    alert("Preencha corretamente");
     return;
   }
 
-  const produto = ingredientesBase.find(p => p.id === produtoId);
-  const custoUnit = Number(produto.custo_unitario);
-  const custoCalc = custoUnit * qtd;
+  const prod = ingredientesBase.find(p => p.id === produtoId);
+  const custo = prod.custo_unitario * qtd;
 
   const { error } = await sb
     .from("buffet_itens")
     .insert({
       buffet_id: buffetId,
-      produto_id: produto.id,
-      nome: produto.nome,
+      produto_id: prod.id,
+      nome: prod.nome,
       quantidade: qtd,
-      unidade_uso: produto.unidade_padrao,
-      custo_unitario: custoUnit,
-      custo_calculado: custoCalc
+      unidade_uso: prod.unidade_padrao,
+      custo_unitario: prod.custo_unitario,
+      custo_calculado: custo
     });
 
   if(error){
@@ -890,88 +594,60 @@ async function salvarIngrediente(buffetId){
     return;
   }
 
-  ingProduto.value = "";
-  ingQtd.value = "";
-  ingUnidade.value = "";
-
   abrir(pratos.find(p => p.id === buffetId));
 }
 
-/* ================= EDITAR INGREDIENTE ================= */
+/* ================= EDITAR ================= */
 async function editarIngrediente(itemId, buffetId){
-  const { data, error } = await sb
+  const { data } = await sb
     .from("buffet_itens")
     .select("*")
     .eq("id", itemId)
     .single();
-
-  if(error){
-    console.error(error);
-    return;
-  }
 
   ingProduto.value = data.produto_id;
   ingQtd.value = data.quantidade;
   ingUnidade.value = data.unidade_uso;
 
   const btn = document.getElementById("btnIngrediente");
-  btn.innerText = "ATUALIZAR INGREDIENTE";
+  btn.innerText = "ATUALIZAR";
 
-  btn.onclick = async () => {
+  btn.onclick = async ()=>{
     const qtd = Number(ingQtd.value || 0);
-    if(qtd <= 0){
-      alert("Quantidade inválida");
-      return;
-    }
+    const prod = ingredientesBase.find(p => p.id === ingProduto.value);
+    const custo = prod.custo_unitario * qtd;
 
-    const produto = ingredientesBase.find(p => p.id === ingProduto.value);
-    const custoCalc = produto.custo_unitario * qtd;
-
-    const { error } = await sb
-      .from("buffet_itens")
-      .update({
-        quantidade: qtd,
-        custo_calculado: custoCalc
-      })
-      .eq("id", itemId);
-
-    if(error){
-      console.error(error);
-      alert("Erro ao atualizar ingrediente");
-      return;
-    }
+    await sb.from("buffet_itens").update({
+      quantidade: qtd,
+      custo_calculado: custo
+    }).eq("id", itemId);
 
     btn.innerText = "SALVAR INGREDIENTE";
-    btn.onclick = () => salvarIngrediente(buffetId);
-
-    ingProduto.value = "";
-    ingQtd.value = "";
-    ingUnidade.value = "";
+    btn.onclick = ()=>salvarIngrediente(buffetId);
 
     abrir(pratos.find(p => p.id === buffetId));
   };
 }
 
-/* ================= EXCLUIR INGREDIENTE ================= */
+/* ================= EXCLUIR ================= */
 async function excluirIngrediente(itemId, buffetId){
-  if(!confirm("Excluir este ingrediente do prato?")) return;
+  if(!confirm("Excluir ingrediente?")) return;
 
-  const { error } = await sb
-    .from("buffet_itens")
-    .delete()
-    .eq("id", itemId);
-
-  if(error){
-    console.error(error);
-    alert("Erro ao excluir ingrediente");
-    return;
-  }
-
+  await sb.from("buffet_itens").delete().eq("id", itemId);
   abrir(pratos.find(p => p.id === buffetId));
 }
 
-  
+/* ================= FECHAR ================= */
+function fechar(){
+  modal.style.display = "none";
+  document.body.style.overflow = "";
+}
+
+/* ================= INIT ================= */
+carregarIngredientesBase();
+carregarPratos();
 </script>
+
 
 
 </body>
